--- a/index.html
+++ b/index.html
@@ -127,5 +127,11 @@ h1 {
 
 <a href="home.html">Click</a>
 
+<br><br><br><br>
+
+<video width="320" height="240" controls>
+  <source src="img/a.mp4" type="video/mp4">
+</video>
+
 </body>
 </html>
