my website major update

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<link rel="icon" href="images/icon.ico" >
-<title>Kuntal Samanta</title>
+<link rel="icon" href="images/icon.ico">
+<title>Kuntal Samanta - Python, Django Professional</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -29,45 +29,83 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-			<p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Python Django Developer</p>
+			<p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Python, Django Professional</p>
 			<p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>West Bengal, India</p>
-			<p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>kuntal.samanta.foryou@gmail.com</p>
+			<p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>kuntal.samanta.jobs@gmail.com</p>
 			<p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91 7407501378</p>
-			<p>
-				<label style="color: forestgreen;">Github : </label><a href="https://github.com/kuntal-python-django">https://github.com/kuntal-python-django</a>
-			</p>
-			<p>
-				<label style="color: forestgreen;">Website : </label><a href="https://pyworld.pythonanywhere.com">https://pyworld.pythonanywhere.com</a>
-			</p>
           <hr>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
-          <p>Python</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">85%</div>
-          </div>
-          <p>Django</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
-              <div class="w3-center w3-text-white">80%</div>
-            </div>
-          </div>
-		  <p>Database</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">60%</div>
-          </div>
-          <br>
+          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Top Skills</b></p>
+            <ol>
+                <li>
+                    <p>Python</p>
+                </li>
+                <li>
+                    <p>Django</p>
+                </li>
+                <li>
+                    <p>Scrapy</p>
+                </li>
+            </ol>
+          <hr>
 
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
-          <p>English</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">80%</div>
-          </div>
-          <br><br>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-sitemap fa-fw w3-margin-right w3-text-teal"></i>My Website</b></p>
+             <ol>
+                <li>
+                    <h6><a href="https://pyworld.pythonanywhere.com" target="_blank">PyWorld - Website For Students</a></h6>
+                </li>
+                <li>
+                    <h6><a href="https://kuntal-python-django.github.io/document.html" target="_blank">My Certificates</a></h6>
+                </li>
+                <li>
+                    <h6><a href="https://kuntal-python-django.github.io/gallery.html" target="_blank">Kuntal's Gallery</a></h6>
+                </li>
+            </ol>
+          <hr>
 
-		<a href="doc/resume.pdf" target="_blank"><button class="w3-tag w3-teal w3-round">Download Resume</button></a>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-download fa-fw w3-margin-right w3-text-teal"></i>Hire Me</b></p>
+          <p align="center">
+              <button class="w3-teal"><a href="doc/resume.pdf" target="_blank">Download Resume</a></button>
+          </p>
+          <hr>
 
-		<br><br>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-refresh fa-fw w3-margin-right w3-text-teal"></i>Follow Me</b></p>
+            <p align="center">
+                <a href="https://github.com/kuntal-python-django" target="_blank">
+                <i class="fa fa-github w3-hover-opacity"></i>
+            </a>
+            &nbsp;&nbsp;
+            <a href="https://www.linkedin.com/in/kuntal-samanta-python" target="_blank">
+                <i class="fa fa-linkedin w3-hover-opacity"></i>
+            </a>
+            &nbsp;&nbsp;
+            <a href="https://www.facebook.com/iamkuntalsamanta" target="_blank">
+                <i class="fa fa-facebook-official w3-hover-opacity"></i>
+            </a>
+            &nbsp;&nbsp;
+            <a href="https://www.instagram.com/kuntal_1430" target="_blank">
+                <i class="fa fa-instagram w3-hover-opacity"></i>
+            </a>
+            &nbsp;&nbsp;
+            <a href="https://twitter.com/samanta04kuntal" target="_blank">
+                <i class="fa fa-twitter w3-hover-opacity"></i>
+            </a>
+            </p>
+
+            <hr>
+            <p class="w3-large w3-text-theme"><b><i class="fa fa-language fa-fw w3-margin-right w3-text-teal"></i>Languages Known</b></p>
+            <ol>
+                <li>
+                    <p>English</p>
+                </li>
+                <li>
+                    <p>Bengali</p>
+                </li>
+                <li>
+                    <p>Hindi</p>
+                </li>
+            </ol>
+
         </div>
       </div><br>
 
@@ -79,10 +117,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <!-- Right Column -->
     <div class="w3-twothird">
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h3>
         
 		<div class="w3-container">
-			<h5 class="w3-opacity"><b>Backend Developer at Capital Numbers Infotech Pvt Ltd</b></h5>
+			<h4>Backend Developer at Capital Numbers Infotech Pvt Ltd</h4>
 			<h6 class="w3-text-teal">
 				<i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
 				<!--
@@ -95,7 +133,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
 
         <div class="w3-container">
-          	<h5 class="w3-opacity"><b>Full Stack Developer at NatIt Solved Pvt Ltd </b></h5>
+          	<h4>Full Stack Developer at NatIt Solved Pvt Ltd</h4>
           	<h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2019 - Feb 2020</h6>
 			<!--
           	<p>
@@ -107,7 +145,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
 
         <div class="w3-container">
-          	<h5 class="w3-opacity"><b>Software Engineer at Eclipse Technoconsulting Global Pvt Ltd</b></h5>
+          	<h4>Software Engineer at Eclipse Technoconsulting Global Pvt Ltd</h4>
           	<h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2017 - Nov 2019</h6>
 			<!--
           	<p>
@@ -117,32 +155,111 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 			-->
           <hr>
         </div>
-
       </div>
 
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
-        
+        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h3>
+
 		<div class="w3-container">
-          <h5 class="w3-opacity"><b>College Of Engineering & Management</b></h5>
+          <h4>College Of Engineering & Management</h4>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2014 - June 2018</h6>
-          <p>Bachelor Of Technology</p>
+          <p>Bachelor Of Technology [B.Tech]</p>
           <hr>
         </div>
 
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Burdwan Raj Collegiate School</b></h5>
+          <h5>Burdwan Raj Collegiate School</h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2012</h6>
-          <p>Higher Secondary [10 + 2]</p>
+          <p>Higher Secondary [10 + 2 th Level]</p>
           <hr>
         </div>
 
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Kishore Kona Nabagrami Adarsha Vidyalaya </b></h5>
+          <h5>Kishore Kona Nabagrami Adarsha Vidyalaya</h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010</h6>
-          <p>Madhyamik [10]</p><br>
+          <p>Madhyamik [10th Level]</p><br>
         </div>
+      </div>
 
+
+      <br />
+      <div class="w3-container w3-card w3-white">
+        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Skill Set & Tools</h3>
+            <div class="w3-container">
+                <h6><b>Programming Languages</b>: Python 3.x</h6>
+                <h6><b>Framework</b>: Django, Django-Rest-Framework, Scrapy</h6>
+                <h6><b>Databases</b>: Postgresql</h6>
+              <hr>
+            </div>
+            <div class="w3-container">
+                <h6><b>Version Controlling Tool</b>:  Github, Gitlab</h6>
+              <hr>
+            </div>
+            <div class="w3-container">
+                    <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm</h6>
+              <hr>
+            </div>
+            <div class="w3-container">
+                    <h6><b>Operating Systems</b>:  Ubuntu [Prefer]</h6>
+              <hr>
+            </div>
+      </div>
+
+
+      <br />
+      <div class="w3-container w3-card w3-white">
+        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Achievements</h3>
+        <ol>
+            <li>
+                <div class="w3-container">
+                  <h6>2nd Position holder in Remote-Control(RC) Plane competition at NIT Jamshedpur</h6>
+                  <hr>
+                </div>
+            </li>
+            <li>
+                <div class="w3-container">
+                  <h6>I have qualified Microsoft Technology Associate (MTA) examination 21th July 2017</h6>
+                  <hr>
+                </div>
+            </li>
+            <li>
+                <div class="w3-container">
+                  <h6>Event Coordinator of 9th National Level Techno Management Fest at College Of Engineering & Management</h6>
+                  <hr>
+                </div>
+            </li>
+            <li>
+                <div class="w3-container">
+                  <h6>Coordinator of Bluetooth Robotics (IOT) training workshop at College Of Engineering & Management</h6>
+                  <hr>
+                </div>
+            </li>
+            <li>
+                <div class="w3-container">
+                  <h6>Best Technocrat Award From Eclipse Technoconsulting Global Pvt Ltd in 2018</h6>
+                  <hr>
+                </div>
+            </li>
+        </ol>
+      </div>
+
+      <br />
+      <div class="w3-container w3-card w3-white">
+        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Achievements</h3>
+        <ol>
+            <li>
+                <div class="w3-container">
+                  <h6></h6>
+                  <hr>
+                </div>
+            </li>
+            <li>
+                <div class="w3-container">
+                  <h6></h6>
+                  <hr>
+                </div>
+            </li>
+        </ol>
       </div>
 
     <!-- End Right Column -->
@@ -155,18 +272,26 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
-<br />
-	<a href="https://www.facebook.com/iamkuntalsamanta">
-		<i class="fa fa-facebook-official w3-hover-opacity"></i>
-	</a>
-	&nbsp;&nbsp;
-	<a href="https://twitter.com/samanta04kuntal">
-		<i class="fa fa-twitter w3-hover-opacity"></i>
-	</a>
-	&nbsp;&nbsp;
-	<a href="https://www.linkedin.com/in/kuntal-samanta-python">
-		<i class="fa fa-linkedin w3-hover-opacity"></i>
-	</a>
+    <br />
+    <a href="https://github.com/kuntal-python-django">
+        <i class="fa fa-github w3-hover-opacity"></i>
+    </a>
+    &nbsp;
+    <a href="https://www.linkedin.com/in/kuntal-samanta-python">
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </a>
+    &nbsp;
+    <a href="https://www.facebook.com/iamkuntalsamanta">
+        <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    </a>
+    &nbsp;
+    <a href="https://www.instagram.com/kuntal_1430">
+        <i class="fa fa-instagram w3-hover-opacity"></i>
+    </a>
+    &nbsp;
+    <a href="https://twitter.com/samanta04kuntal">
+        <i class="fa fa-twitter w3-hover-opacity"></i>
+    </a>
 
 	<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
