Image Upload for gallery

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="images/u1.jpg" style="width:100%" alt="Avatar">
+          <img src="images/u2.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2 style="color: whitesmoke;">Kuntal Samanta</h2>
+            <h2 style="color: black;">Kuntal Samanta</h2>
           </div>
         </div>
         <div class="w3-container">
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                     <h6><a href="https://pyworld.pythonanywhere.com" target="_blank">PyWorld - Website For Students</a></h6>
                 </li>
                 <li>
-                    <h6><a href="https://kuntal-python-django.github.io/document.html" target="_blank">My Certificates</a></h6>
+                    <h6><a href="https://kuntal-python-django.github.io/document.html" target="_blank">See Certificates</a></h6>
                 </li>
                 <li>
                     <h6><a href="https://kuntal-python-django.github.io/gallery.html" target="_blank">Kuntal's Gallery</a></h6>
@@ -244,23 +244,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div>
 
       <br />
-      <div class="w3-container w3-card w3-white">
-        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Achievements</h3>
-        <ol>
-            <li>
-                <div class="w3-container">
-                  <h6></h6>
-                  <hr>
-                </div>
-            </li>
-            <li>
-                <div class="w3-container">
-                  <h6></h6>
-                  <hr>
-                </div>
-            </li>
-        </ol>
-      </div>
 
     <!-- End Right Column -->
     </div>
