--- a/gallery.html
+++ b/gallery.html
@@ -15,33 +15,55 @@
 <br>
 
 <div class="container">
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g2.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g3.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     <br /><br /><br />
 
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g4.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g5.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g6.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     <br /><br /><br />
 
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g7.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g8.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g9.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     <br /><br /><br />
 
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g10.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g11.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/u1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <img src="images/g12.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
     <br /><br /><br />
+
+    <img src="images/g13.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="images/g14.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="images/g15.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <br /><br /><br />
+
+    <img src="images/g16.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="images/g17.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="images/g18.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <br /><br /><br />
+
+    <img src="images/g19.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="images/g20.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="images/g21.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <br /><br /><br />
+
 
 </div>
 
