gallery page updated

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                     <h6><a href="https://pyworld.pythonanywhere.com" target="_blank">PyWorld - Website For Students</a></h6>
                 </li>
                 <li>
-                    <h6><a href="https://kuntal-python-django.github.io/document.html" target="_blank">See Certificates</a></h6>
+                    <h6><a href="document.html" target="_blank">See Certificates</a></h6>
                 </li>
                 <li>
-                    <h6><a href="https://kuntal-python-django.github.io/gallery.html" target="_blank">Kuntal's Gallery</a></h6>
+                    <h6><a href="gallery.html" target="_blank">Kuntal's Gallery</a></h6>
                 </li>
             </ol>
           <hr>
