--- a/gallery.html
+++ b/gallery.html
@@ -15,54 +15,54 @@
 <br>
 
 <div class="container">
-    <img src="images/g1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g1.jpg" target="_blank"><img src="images/g1.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g2.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g2.jpg" target="_blank"><img src="images/g2.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g3.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g3.jpg" target="_blank"><img src="images/g3.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     <br /><br /><br />
 
-    <img src="images/g4.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g4.jpg" target="_blank"><img src="images/g4.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g5.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g5.jpg" target="_blank"><img src="images/g5.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g6.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g6.jpg" target="_blank"><img src="images/g6.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     <br /><br /><br />
 
-    <img src="images/g7.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g7.jpg" target="_blank"><img src="images/g7.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g8.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g8.jpg" target="_blank"><img src="images/g8.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g9.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g9.jpg" target="_blank"><img src="images/g9.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     <br /><br /><br />
 
-    <img src="images/g10.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g10.jpg" target="_blank"><img src="images/g10.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g11.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g11.jpg" target="_blank"><img src="images/g11.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g12.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g12.jpg" target="_blank"><img src="images/g12.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     <br /><br /><br />
 
-    <img src="images/g13.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g13.jpg" target="_blank"><img src="images/g13.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g14.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g14.jpg" target="_blank"><img src="images/g14.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g15.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g15.jpg" target="_blank"><img src="images/g15.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     <br /><br /><br />
 
-    <img src="images/g16.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g16.jpg" target="_blank"><img src="images/g16.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g17.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g17.jpg" target="_blank"><img src="images/g17.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g18.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g18.jpg" target="_blank"><img src="images/g18.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     <br /><br /><br />
 
-    <img src="images/g19.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g19.jpg" target="_blank"><img src="images/g19.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g20.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
+    <a href="images/g20.jpg" target="_blank"><img src="images/g20.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="images/g21.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250">
-    <br /><br /><br />
+<!--    <a href="images/g6.jpg" target="_blank"><img src="images/g6.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>-->
+<!--    <br /><br /><br />-->
 
 
 </div>
