Image/g5 name changed

--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
 
     <a href="images/g4.jpg" target="_blank"><img src="images/g4.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="images/g5.jpg" target="_blank"><img src="images/g5.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
+    <a href="images/g5.JPG" target="_blank"><img src="images/g5.JPG" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
     <a href="images/g6.jpg" target="_blank"><img src="images/g6.jpg" class="img-circle" alt="Cinque Terre" width="350" height="250"></a>
     <br /><br /><br />
