--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                     <p>Hindi</p>
                 </li>
             </ol>
-
+          <br />
         </div>
       </div><br>
 
@@ -163,22 +163,23 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 		<div class="w3-container">
           <h4>College Of Engineering & Management</h4>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2014 - June 2018</h6>
           <p>Bachelor Of Technology [B.Tech]</p>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2014 - June 2018</h6>
           <hr>
         </div>
 
         <div class="w3-container">
           <h5>Burdwan Raj Collegiate School</h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2012</h6>
           <p>Higher Secondary [10 + 2 th Level]</p>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2012</h6>
           <hr>
         </div>
 
         <div class="w3-container">
           <h5>Kishore Kona Nabagrami Adarsha Vidyalaya</h5>
+          <p>Madhyamik [10th Level]</p>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010</h6>
-          <p>Madhyamik [10th Level]</p><br>
+          <br>
         </div>
       </div>
 
@@ -210,38 +211,20 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <br />
       <div class="w3-container w3-card w3-white">
         <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-trophy fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Achievements</h3>
-        <ol>
-            <li>
-                <div class="w3-container">
-                  <h6>2nd Position holder in Remote-Control(RC) Plane competition at NIT Jamshedpur</h6>
-                  <hr>
-                </div>
-            </li>
-            <li>
-                <div class="w3-container">
-                  <h6>I have qualified Microsoft Technology Associate (MTA) examination 21th July 2017</h6>
-                  <hr>
-                </div>
-            </li>
-            <li>
-                <div class="w3-container">
-                  <h6>Event Coordinator of 9th National Level Techno Management Fest at College Of Engineering & Management</h6>
-                  <hr>
-                </div>
-            </li>
-            <li>
-                <div class="w3-container">
-                  <h6>Coordinator of Bluetooth Robotics (IOT) training workshop at College Of Engineering & Management</h6>
-                  <hr>
-                </div>
-            </li>
-            <li>
-                <div class="w3-container">
-                  <h6>Best Technocrat Award From Eclipse Technoconsulting Global Pvt Ltd in 2018</h6>
-                  <hr>
-                </div>
-            </li>
-        </ol>
+        
+        <div class="w3-container">
+          <h6><b>1.</b> &nbsp; I have qualified Microsoft Technology Associate (MTA) examination 21th July 2017</h6>
+          <hr>
+          <h6><b>2.</b> &nbsp; 2nd Position holder in Remote-Control(RC) Plane competition at NIT Jamshedpur</h6>
+          <hr>
+          <h6><b>3.</b> &nbsp; Event Coordinator of 9th National Level Techno Management Fest at College Of Engineering & Management</h6>
+          <hr>
+          <h6><b>4.</b> &nbsp; Best Technocrat Award From Eclipse Technoconsulting Global Pvt Ltd in 2018</h6>
+          <hr>
+          <h6><b>5.</b> &nbsp; Coordinator of Bluetooth Robotics (IOT) training workshop at College Of Engineering & Management</h6>
+          <br />
+        </div>
+
       </div>
 
       <br />
