--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-			<p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Python, Django Professional</p>
-			<p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>West Bengal, India</p>
-			<p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>kuntal.samanta.jobs@gmail.com</p>
-			<p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91 7407501378</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Python, Django Professional</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>West Bengal, India</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>kuntal.samanta.jobs@gmail.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91 7407501378</p>
+          <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-large w3-text-teal"></i>Feb 1, 1995</p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Top Skills</b></p>
@@ -43,26 +44,45 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 <li>
                     <p>Django</p>
                 </li>
-                <li>
-                    <p>Scrapy</p>
-                </li>
             </ol>
+          <hr>
+
+          <p class="w3-large"><b><i class="fa fa-heart fa-fw w3-margin-right w3-text-teal"></i>About Me</b></p>
+            <span>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                It has survived not only five centuries, but also the leap into electronic typesetting,
+                remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset 
+                sheets containing Lorem Ipsum passages, and more recently with desktop publishing software 
+                like Aldus PageMaker including versions of Lorem Ipsum.
+            </span>
           <hr>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-sitemap fa-fw w3-margin-right w3-text-teal"></i>My Website</b></p>
              <ol>
                 <li>
-                    <h6><a href="https://pyworld.pythonanywhere.com" target="_blank">PyWorld - Website For Students</a></h6>
+                    <h6>
+                      <a href="https://pyworld.pythonanywhere.com" target="_blank" style="text-decoration:none">
+                        <span style="color: teal">PyWorld</span>
+                      </a>
+                    </h6>
                 </li>
                 <li>
-                    <h6><a href="gallery.html" target="_blank">Kuntal's Gallery</a></h6>
+                    <h6>
+                      <a href="gallery.html" target="_blank" style="text-decoration:none">
+                        <span style="color: teal">Kuntal's Gallery</span>
+                      </a>
+                    </h6>
                 </li>
             </ol>
           <hr>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-download fa-fw w3-margin-right w3-text-teal"></i>Hire Me</b></p>
           <p align="center">
-              <button class="w3-teal"><a href="doc/resume.pdf" target="_blank">Download Resume</a></button>
+              <button class="w3-teal">
+                <a href="doc/resume.pdf" target="_blank" style="text-decoration:none">Download Resume</a>
+              </button>
           </p>
           <hr>
 
@@ -117,64 +137,82 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <!-- Right Column -->
     <div class="w3-twothird">
+
+      <div class="w3-container w3-card w3-white">
+        <h3 class="w3-text-grey w3-padding-16">
+            <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Skill Set & Tools
+        </h3>
+        <div class="w3-container">
+            <h6><b>Programming Languages</b>: Python 3.x</h6>
+            <h6><b>Web Framework</b>: Django, Django-Rest-Framework, Django CMS</h6>
+            <h6><b>Web-Crawling Framework</b>: Scrapy</h6>
+            <h6><b>Databases</b>: Postgresql</h6>
+            <h6><b>AWS</b>: S3, EC2</h6>
+            <h6><b>Version Controlling Tool</b>:  Git</h6>
+            <h6><b>API Doc & Testing</b>: Swagger,  Postman </h6>
+            <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm</h6>
+            <h6><b>Operating Systems</b>:  Ubuntu [Prefer]</h6>
+            <br />
+        </div>
+      </div>
+      <br />
+
+
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h3>
-        
-		<div class="w3-container">
-			<h4>Backend Developer at Capital Numbers Infotech Pvt Ltd</h4>
-			<h6 class="w3-text-teal">
-				<i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-				<!--
-				<p>
-					Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
-					reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.
-				</p>
-				-->
+        <h3 class="w3-text-grey w3-padding-16">
+          <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience
+        </h3>
+        <div class="w3-container">
+          <h4>Backend Developer at Capital Numbers Infotech Pvt Ltd</h4>
+          <h6 class="w3-text-teal">
+            <i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2020 - <span class="w3-tag w3-teal w3-round">Current</span>
+          </h6>
+          <p>
+              <a href="company/cn.html" target="_blank" style="text-decoration:none">
+                <span style="color: teal">Click Here To See Contribution</span>
+              </a>
+          </p>
           <hr>
         </div>
-
         <div class="w3-container">
-          	<h4>Full Stack Developer at NatIt Solved Pvt Ltd</h4>
-          	<h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2019 - Feb 2020</h6>
-			<!--
-          	<p>
-			  	Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
-			    reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.
-		  	</p>
-			-->
+            <h4>Full Stack Developer at NatIt Solved Pvt Ltd</h4>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2019 - Feb 2020</h6>
+            <p>
+                <a href="company/nat.html" target="_blank" style="text-decoration:none">
+                  <span style="color: teal">Click Here To See Contribution</span>
+                </a>
+            </p>
           <hr>
         </div>
-
         <div class="w3-container">
-          	<h4>Software Engineer at Eclipse Technoconsulting Global Pvt Ltd</h4>
-          	<h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2017 - Nov 2019</h6>
-			<!--
-          	<p>
-			  	Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
-			    reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.
-		  	</p>
-			-->
+            <h4>Software Engineer at Eclipse Technoconsulting Global Pvt Ltd</h4>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2017 - Nov 2019</h6>
+            <p>
+                <a href="company/ets.html" target="_blank" style="text-decoration:none">
+                  <span style="color: teal">Click Here To See Contribution</span>
+                </a>
+            </p>
           <br />
         </div>
       </div>
 
-      <div class="w3-container w3-card w3-white">
-        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h3>
 
-		<div class="w3-container">
+      <div class="w3-container w3-card w3-white">
+        <h3 class="w3-text-grey w3-padding-16">
+            <i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education
+        </h3>
+        <div class="w3-container">
           <h4>College Of Engineering & Management</h4>
           <p>Bachelor Of Technology [B.Tech]</p>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2014 - June 2018</h6>
           <hr>
         </div>
-
         <div class="w3-container">
           <h5>Burdwan Raj Collegiate School</h5>
           <p>Higher Secondary [10 + 2 th Level]</p>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2012</h6>
           <hr>
         </div>
-
         <div class="w3-container">
           <h5>Kishore Kona Nabagrami Adarsha Vidyalaya</h5>
           <p>Madhyamik [10th Level]</p>
@@ -182,33 +220,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br>
         </div>
       </div>
-
-
       <br />
-      <div class="w3-container w3-card w3-white">
-        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Skill Set & Tools</h3>
-            <div class="w3-container">
-                <h6><b>Programming Languages</b>: Python 3.x</h6>
-                <h6><b>Framework</b>: Django, Django-Rest-Framework, Scrapy</h6>
-                <h6><b>Databases</b>: Postgresql</h6>
-              <hr>
-            </div>
-            <div class="w3-container">
-                <h6><b>Version Controlling Tool</b>:  Github, Gitlab</h6>
-              <hr>
-            </div>
-            <div class="w3-container">
-                    <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm</h6>
-              <hr>
-            </div>
-            <div class="w3-container">
-                    <h6><b>Operating Systems</b>:  Ubuntu [Prefer]</h6>
-              <br />
-            </div>
-      </div>
 
 
-      <br />
       <div class="w3-container w3-card w3-white">
         <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-trophy fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Achievements</h3>
         
